--- a/login.html
+++ b/login.html
@@ -302,7 +302,7 @@
                 <p>
                     Copyright © 2048 LUGX Gaming Company. Todos os direitos reservados. &nbsp;&nbsp;
                     <a rel="nofollow" href="https://templatemo.com" target="_blank">Design: TemplateMo</a>
-                    &nbsp;| Modificado por Victor Gabryel da Silva
+                    &nbsp;| Modificado por <a href="https://github.com/victor-gabryel" target="_blank">Victor Gabryel da Silva</a>
                 </p>
             </div>
         </div>
